force-app/main/default/objects/B25__View__c/B25__View__c.object-meta.xml
<CustomObject>
    <description>Configurations for the View of a Calendar.</description>
    <label>View</label>
    <nameField>
        <displayFormat>VIEW-{000000}</displayFormat>
        <label>View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>