force-app/main/default/objects/B25__View__c/fields/B25__Column_Hiding_Behavior__c.field-meta.xml
<CustomField>
    <fullName>B25__Column_Hiding_Behavior__c</fullName>
    <description>Controls which time ranges to hide on the calendar.</description>
    <inlineHelpText>Contrôle les plages horaires à masquer sur le calendrier.</inlineHelpText>
    <label>Column Hiding Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DONT_HIDE_ANYTHING</fullName>
                <label>Don’t hide anything</label>
            </value>
            <value>
                <fullName>HIDE_CLOSED_TIMES</fullName>
                <label>Hide closed times</label>
            </value>
            <value>
                <fullName>HIDE_CLOSED_TIMES_WITHOUT_RESERVATIONS</fullName>
                <default>true</default>
                <label>Hide closed times without reservations</label>
            </value>
            <value>
                <fullName>HIDE_TIMES_OUTSIDE_OF_START_END</fullName>
                <label>Hide times outside of start/end</label>
            </value>
            <value>
                <fullName>HIDE_TIMES_OUTSIDE_OF_START_END_WITHOUT_RESERVATIONS</fullName>
                <label>Hide times outside of start/end, without reservations</label>
            </value>
            <value>
                <fullName>HIDE_ALL_TIMES_WITHOUT_RESERVATIONS</fullName>
                <label>Hide all times without reservations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>