force-app/main/default/objects/B25__View__c/fields/B25__Day_Header_Time_Format__c.field-meta.xml
<CustomField>
    <fullName>B25__Day_Header_Time_Format__c</fullName>
    <description>The time format used by the Single record Calendar for the headers above the day columns.</description>
    <inlineHelpText>Le format de l’heure utilisé par le calendrier à enregistrement unique pour les en-têtes au-dessus des colonnes de jours.</inlineHelpText>
    <label>Day Header Time Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>