force-app/main/default/objects/B25__View__c/fields/B25__Disable_Progressive_Event_Rendering__c.field-meta.xml
<CustomField>
    <fullName>B25__Disable_Progressive_Event_Rendering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables rendering events while you scroll and instead renders them all at once.</description>
    <inlineHelpText>Désactive le rendu des événements pendant le défilement et les affiche à la place tous en une seule fois.</inlineHelpText>
    <label>Disable Progressive Event Rendering</label>
    <type>Checkbox</type>
</CustomField>