force-app/main/default/objects/B25__View__c/fields/B25__Enable_Availability_Aware_Selection__c.field-meta.xml
<CustomField>
    <fullName>B25__Enable_Availability_Aware_Selection__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Take into account Availabilities when selecting a time slot on the calendar. When the user selects a cell, only the available part of the cell will be selected.</description>
    <inlineHelpText>Pour tenir compte des disponibilités lors de la sélection d’un créneau horaire sur le calendrier. Lorsque l’utilisateur sélectionne une cellule, seule la partie disponible de la cellule sera sélectionnée.</inlineHelpText>
    <label>Enable Availability Aware Selection</label>
    <type>Checkbox</type>
</CustomField>