force-app/main/default/objects/B25__View__c/fields/B25__Enable_Grouping__c.field-meta.xml
<CustomField>
    <fullName>B25__Enable_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only officially supported on Staff and Group Calendars.
Divides the Staff and Group resources in blocks.
The Availabilities are only loaded when the block is openend.
Enable this when loading Availabilities takes too long.</description>
    <inlineHelpText>Uniquement pris en charge officiellement sur les calendriers du personnel et des groupes. Divise les ressources du personnel et des groupes en blocs. Les disponibilités ne sont chargées que lorsque le bloc est ouvert. Activez cette option lorsque le chargement des disponibilités prend trop de temps.</inlineHelpText>
    <label>Enable Grouping</label>
    <type>Checkbox</type>
</CustomField>