force-app/main/default/objects/B25__View__c/fields/B25__Enable_Subcell_Availability_Rendering__c.field-meta.xml
<CustomField>
    <fullName>B25__Enable_Subcell_Availability_Rendering__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, the darker sections that indicate Unavailabilities will no longer be restricted to cell borders and will represent the actual Unavailabilities within a cell. This may negatively impact client side performance on large calendars.</description>
    <inlineHelpText>Lorsque cette option est activée, les sections plus sombres qui indiquent les indisponibilités ne seront plus limitées aux bordures des cellules et représenteront les indisponibilités réelles dans une cellule. Cela peut avoir un impact négatif sur les performances côté client sur les grands calendriers.</inlineHelpText>
    <label>Enable Subcell Availability Rendering</label>
    <type>Checkbox</type>
</CustomField>