force-app/main/default/objects/B25__View__c/fields/B25__End_Time__c.field-meta.xml
<CustomField>
    <fullName>B25__End_Time__c</fullName>
    <description>The time of day when the view ends. Overrides the two ‘Hide Times’ checkboxes.</description>
    <inlineHelpText>L’heure de la journée à laquelle la vue se termine. Remplace les deux cases à cocher « Masquer les heures ».</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>