force-app/main/default/objects/B25__View__c/fields/B25__Expand_Events_To_Fill_Cell__c.field-meta.xml
<CustomField>
    <fullName>B25__Expand_Events_To_Fill_Cell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, events shorter than a cell will be expanded to fill the entire cell. These events will get a duration bar to indicate their actual times.</description>
    <inlineHelpText>Si cette option est cochée, les événements plus courts qu’une cellule seront étendus pour remplir la cellule entière. Ces événements se verront attribuer une barre de durée pour indiquer leurs heures réelles.</inlineHelpText>
    <label>Expand Events To Fill Cell</label>
    <type>Checkbox</type>
</CustomField>