force-app/main/default/objects/B25__View__c/fields/B25__First_Day_Of_View__c.field-meta.xml
<CustomField>
    <fullName>B25__First_Day_Of_View__c</fullName>
    <description>What day the View should start on. &apos;Locale&apos; uses the first day of the week, based on the users locale setting. When left empty, the selected day on the Calendar will be used as the first day of the View.</description>
    <inlineHelpText>Le jour où la vue doit commencer. « Local » utilise le premier jour de la semaine, en fonction des paramètres régionaux de l’utilisateur. Si ce champ est laissé vide, le jour sélectionné sur le calendrier sera utilisé comme premier jour de la vue.</inlineHelpText>
    <label>First Day Of View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locale</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>First day of the month</fullName>
            </value>
            <value>
                <fullName>First day of the year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>