force-app/main/default/objects/B25__View__c/fields/B25__Grouping_Size__c.field-meta.xml
<CustomField>
    <fullName>B25__Grouping_Size__c</fullName>
    <description>The number of records that the top level Resources wil be split into when pagination is enabled.</description>
    <inlineHelpText>Le nombre d’enregistrements en lesquels les ressources de niveau supérieur seront divisées lorsque la pagination est activée.</inlineHelpText>
    <label>Grouping Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>