force-app/main/default/objects/B25__View__c/fields/B25__Hide_Availabilities__c.field-meta.xml
<CustomField>
    <fullName>B25__Hide_Availabilities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This makes this View not load the Availabilities
		When the org has a large amount of Resources loading the Availabilities can take a long time on longer Views.
		The opening times will still be checked on save but will not display in the Calendar View.</description>
    <inlineHelpText>Cette vue ne charge pas les disponibilités. Lorsque l’organisation a une grande quantité de ressources, le chargement des disponibilités peut prendre beaucoup de temps sur des vues plus longues. Les heures d’ouverture seront toujours vérifiées lors de la sauvegarde, mais ne s’afficheront pas dans la vue calendrier.</inlineHelpText>
    <label>Hide Availabilities</label>
    <type>Checkbox</type>
</CustomField>