force-app/main/default/objects/B25__View__c/fields/B25__Label__c.field-meta.xml
<CustomField>
    <fullName>B25__Label__c</fullName>
    <description>The button text to display on the Calendar.</description>
    <inlineHelpText>Le texte du bouton à afficher sur le calendrier.</inlineHelpText>
    <label>Label</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>