force-app/main/default/objects/B25__View__c/fields/B25__Lazy_Reservation_Loading__c.field-meta.xml
<CustomField>
    <fullName>B25__Lazy_Reservation_Loading__c</fullName>
    <description>‘Vertical’ enables Lazy Loading on the vertical axis. ‘Vertical/Horizontal’ enables Lazy Loading on both axes. This last setting is incompatible with any setting that hides parts of the timeline, such as ‘Hide closed time without reservations&apos; on View.</description>
    <inlineHelpText>« Vertical » active le chargement paresseux sur l’axe vertical. « Vertical/Horizontal » active le chargement paresseux sur les deux axes. Ce dernier paramètre est incompatible avec tout paramètre qui masque des parties de la ligne de temps, tel que « Masquer les heures de fermeture sans réservation » dans la vue.</inlineHelpText>
    <label>Lazy Reservation Loading</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
                <default>true</default>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Vertical &amp; Horizontal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>