force-app/main/default/objects/B25__View__c/fields/B25__Slot_Duration__c.field-meta.xml
<CustomField>
    <fullName>B25__Slot_Duration__c</fullName>
    <description>The time interval between each vertical line. Examples: 00:05 = 5 minutes, 24:00 = one day, 7.00:00 = one week.</description>
    <inlineHelpText>L’intervalle de temps entre chaque ligne verticale. Exemples : 00:05 = 5 minutes, 24 h = un jour, 7.00:00 = une semaine.</inlineHelpText>
    <label>Slot Duration</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>