force-app/main/default/objects/B25__View__c/fields/B25__Slot_Height__c.field-meta.xml
<CustomField>
    <fullName>B25__Slot_Height__c</fullName>
    <description>The height in pixels of each slot on the Single record Calendar.</description>
    <inlineHelpText>La hauteur en pixels de chaque créneau sur le calendrier à enregistrement unique.</inlineHelpText>
    <label>Slot Height</label>
    <length>4</length>
    <type>Text</type>
</CustomField>