force-app/main/default/objects/B25__View__c/fields/B25__Slot_Label_Format__c.field-meta.xml
<CustomField>
    <fullName>B25__Slot_Label_Format__c</fullName>
    <description>The text that is displayed in the label of each time column. For possible formats check: https://gen25-jira.atlassian.net/wiki/spaces/BPD/pages/1822916613/Date+Time+Format+Tokens and escape strings by wrapping them in [square brackets].</description>
    <inlineHelpText>Le texte qui est affiché dans le libellé de chaque colonne de temps. Pour les formats possibles, consultez : https://gen25-jira.atlassian.net/wiki/spaces/BPD/pages/1822916613/Date+Time+Format+Tokens et échappez les chaînes de caractères en les entourant de [crochets].</inlineHelpText>
    <label>Slot Label Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>