force-app/main/default/objects/B25__View__c/fields/B25__Slot_Width__c.field-meta.xml
<CustomField>
    <fullName>B25__Slot_Width__c</fullName>
    <description>The width of each time slot in pixels.</description>
    <inlineHelpText>La largeur de chaque créneau horaire en pixels.</inlineHelpText>
    <label>Slot Width</label>
    <length>4</length>
    <type>Text</type>
</CustomField>