force-app/main/default/objects/B25__View__c/fields/B25__Snap_Duration__c.field-meta.xml
<CustomField>
    <fullName>B25__Snap_Duration__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <description>The increment in which you can drag &amp; drop Reservations.</description>
    <inlineHelpText>L’incrément dans lequel vous pouvez glisser et déposer des réservations.</inlineHelpText>
    <label>Snap Duration</label>
    <length>8</length>
    <type>Text</type>
</CustomField>