force-app/main/default/objects/B25__View__c/fields/B25__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>B25__Start_Time__c</fullName>
    <description>The time of day when the view starts. Overrides the two ‘Hide Times’ checkboxes.</description>
    <inlineHelpText>L’heure de la journée à laquelle la vue commence. Remplace les deux cases à cocher « Masquer les heures ».</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>