force-app/main/default/objects/B25__View__c/fields/B25__Time_Header_Duration__c.field-meta.xml
<CustomField>
    <fullName>B25__Time_Header_Duration__c</fullName>
    <description>On the Single Record Calendar, this defines the duration of each indicator on the sidebar containing the time of day. Values should be between 1 and 60 and should divide 60 without a remainder.</description>
    <inlineHelpText>La durée de chaque indicateur de la barre latérale contenant l’heure du jour sur le calendrier à enregistrement unique. Les valeurs doivent être comprises entre 1 et 60 et doivent diviser 60 sans reste.</inlineHelpText>
    <label>Time Header Duration</label>
    <length>2</length>
    <type>Text</type>
</CustomField>