force-app/main/default/objects/B25__View__c/fields/B25__Time_Header_Format__c.field-meta.xml
<CustomField>
    <fullName>B25__Time_Header_Format__c</fullName>
    <description>On the Single Record Calendar, this defines the time format of the sidebar containing the time of day. Valid values are: Clock12Hours, Clock24Hours, Auto. Auto wil use the users preferred time format set in Salesforce.</description>
    <inlineHelpText>Le format de l’heure de la barre latérale contenant l’heure du jour sur le calendrier à enregistrement unique. Valeurs valides : horloge à 12 heures, horloge à 24 heures, automatique. « Automatique » utilisera le format d’heure préféré de l’utilisateur défini dans Salesforce.</inlineHelpText>
    <label>Time Header Format</label>
    <length>12</length>
    <type>Text</type>
</CustomField>