force-app/main/default/objects/B25__View__c/fields/B25__Time_Header_Width__c.field-meta.xml
<CustomField>
    <fullName>B25__Time_Header_Width__c</fullName>
    <description>On the Single Record Calendar, this defines the width of the sidebar containing the time of day. Does nothing on the Multi Record Calendar.</description>
    <inlineHelpText>La largeur de la barre latérale contenant l’heure du jour sur le calendrier à enregistrement unique.</inlineHelpText>
    <label>Time Header Width</label>
    <length>4</length>
    <type>Text</type>
</CustomField>