force-app/main/default/objects/B25__View__c/fields/B25__Time_Range_Format__c.field-meta.xml
<CustomField>
    <fullName>B25__Time_Range_Format__c</fullName>
    <description>The format for the time range at the top of the Calendar, in the following form: start {&lt;format tokens&gt;} end{&lt;format tokens&gt;}.
The format tokens can be found at: https://momentjs.com/docs/#/displaying/format/.</description>
    <inlineHelpText>Le format de la plage horaire en haut du calendrier, sous la forme suivante : début {&lt;tokens de format&gt;} fin {&lt;tokens de format&gt;}. Les tokens de format se trouvent à l’adresse suivante : https://momentjs.com/docs/#/displaying/format/.</inlineHelpText>
    <label>Time Range Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>