force-app/main/default/objects/B25__View__c/fields/B25__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>B25__Unique_Identifier__c</fullName>
    <description>May not contain special characters, and may not start with a number. Used to uniquely identify this View, even if it has the same label as another View.</description>
    <inlineHelpText>Ne peut pas contenir de caractères spéciaux, et ne peut pas commencer par un chiffre. Utilisé pour identifier de façon unique cette vue, même si elle a le même libellé qu’une autre vue.</inlineHelpText>
    <label>Unique Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>