force-app/main/default/objects/B25__View__c/fields/B25__Use_Relative_Snap_Duration__c.field-meta.xml
<CustomField>
    <fullName>B25__Use_Relative_Snap_Duration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When left unchecked Calendar uses fixed intervals for snap durations. Users may be unable to slide back
		to original position.</description>
    <inlineHelpText>Lorsque cette option n’est pas cochée, le calendrier utilise des intervalles fixes pour les durées d’instantané. Les utilisateurs peuvent être incapables de glisser pour revenir à la position d’origine.</inlineHelpText>
    <label>Use Relative Snap Duration</label>
    <type>Checkbox</type>
</CustomField>