force-app/main/default/objects/B25__View__c/fields/B25__View_Duration__c.field-meta.xml
<CustomField>
    <fullName>B25__View_Duration__c</fullName>
    <description>The duration of the View. Examples: 24:00 = one day, 7.00:00 = one week, 30.00:00 = one month.</description>
    <inlineHelpText>La durée de la vue. Exemples : 24:00 = un jour, 7.00:00 = une semaine, 30.00:00 = un mois.</inlineHelpText>
    <label>View Duration</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>