force-app/main/default/objects/B25__View__c/fields/B25__Weekend_Highlight_Color__c.field-meta.xml
<CustomField>
    <fullName>B25__Weekend_Highlight_Color__c</fullName>
    <description>When specified, the background color of cells on Saturdays and Sundays are set to this color.</description>
    <inlineHelpText>Lorsqu’elle est spécifiée, la couleur d’arrière-plan des cellules des samedis et dimanches est fixée à cette couleur.</inlineHelpText>
    <label>Weekend Highlight Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>