force-app/main/default/objects/B25__View__c/recordTypes/B25__Multi_Resource_Calendar_View.recordType-meta.xml
<RecordType>
    <fullName>B25__Multi_Resource_Calendar_View</fullName>
    <active>true</active>
    <description>The configuration object for a view on the multi resource calendar</description>
    <label>Multi Resource Calendar View</label>
</RecordType>