force-app/main/default/objects/B25__View__c/recordTypes/B25__Schedule_View.recordType-meta.xml
<RecordType>
    <fullName>B25__Schedule_View</fullName>
    <active>true</active>
    <description>View for a Schedule</description>
    <label>Schedule View</label>
</RecordType>