force-app/main/default/objects/B25__View__c/validationRules/B25__Unique_Identifier_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>B25__Unique_Identifier_Validation</fullName>
    <active>true</active>
    <description>Unique identifier may not have special characters, and it may not start with a number.</description>
    <errorConditionFormula>NOT(REGEX(B25__Unique_Identifier__c, &quot;^[a-zA-Z][a-zA-Z0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>B25__Unique_Identifier__c</errorDisplayField>
    <errorMessage>Unique identifier may not have special characters, and it may not start with a number.</errorMessage>
</ValidationRule>