force-app/main/default/objects/B25__View__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>B25__Unique_Identifier__c</columns>
    <columns>B25__View_Duration__c</columns>
    <columns>B25__Slot_Duration__c</columns>
    <columns>B25__Snap_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>