force-app/main/default/objects/B25__View__c/listViews/B25__Multi_Calendar_Views.listView-meta.xml
<ListView>
    <fullName>B25__Multi_Calendar_Views</fullName>
    <columns>NAME</columns>
    <columns>B25__Unique_Identifier__c</columns>
    <columns>B25__View_Duration__c</columns>
    <columns>B25__Slot_Duration__c</columns>
    <columns>B25__Snap_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>B25__View__c.B25__Multi_Resource_Calendar_View</value>
    </filters>
    <label>Multi Calendar Views</label>
</ListView>